# linguist

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
definitions/: heuristics.patch  heuristics.yml  languages.yml  pull-new.sh
linguist-types/: Cargo.toml  LICENSE  README.md
linguist-types/src/: lib.rs
src/: cli.rs  definitions.rs  error.rs  indexed.rs  lib.rs  main.rs  utils.rs
tests/: by_extension.rs  by_filename.rs  disambiguate.rs  pull-samples.sh  samples.rs  vendored.rs
