[workspace]
members = ["linguist-types"]

[package]
name = "linguist"
version = "0.1.0"
edition = "2024"

description = "Programming language detection library inspired by Github Linguist, embeddable into Rust projects."
license = "MIT"
repository = "https://github.com/drshade/linguist"

[dependencies]
linguist-types = { path = "linguist-types" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10"
once_cell = "1.20"
serde_json = "1.0"
regex = "1"

[build-dependencies]
linguist-types = { path = "linguist-types" }
serde_yaml_ng = "0.10"
serde_json = "1.0"