[workspace]
members = ["linguist-types"]

[package]
name = "linguist"
version = "0.1.1"
edition = "2024"

description = "Programming language detection library based on Github Linguist."
license = "MIT"
repository = "https://github.com/drshade/linguist"

keywords = ["language", "detection", "linguist", "github", "syntax"]
categories = ["development-tools", "parsing", "text-processing"]

[dependencies]
linguist-types = { path = "linguist-types", version = "0.1.1" }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
once_cell = "1.20"
serde_json = "1"
regex = "1"

[build-dependencies]
linguist-types = { path = "linguist-types", version = "0.1.1" }
serde_yaml_ng = "0.10"
serde_json = "1"